test/src/e2e_vm_tests/test_programs/should_pass/language/tuple_trait/src/main.sw
script;

use core::ops::*;

fn main() -> bool {
    let t = (42, 43);
    assert(t == t);

    true
}
