test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info_enum/src/main.sw
script;

enum MyOption<T> {
    Some: T,
    None: (),
}

fn main() -> bool {
    let _ = MyOption::None;
    true
}
